--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.1",
-    "remark-html": "^15.0.0"
+    "remark-html": "^15.0.0",
+    "three": "^0.136.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.4",
+    "@types/react": "^17.0.38",
+    "typescript": "^4.5.4"
   }
 }
